--- a/poertifolio.html
+++ b/poertifolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>BESIC THINGS TO KNOW ABOUT CHALOTTE LOVE</h1>
+        <h1>BESIC THINGS TO KNOW ABOUT CHALOTTE LOVE FOR UPTI</h1>
         <nav>
             <ul>
                 <li><a href="#about">About me</a> </li>
